web-infras/parser/tests/fixtures/babel/es2015/yield/parameter-default-strict/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (2,17)
2|function fn(x = yield) {}
 |               ^
